P3/test/pl0/error/error12.pl0
const a=1;

procedure b;
begin
end;

begin
	a:=1;
	b:=2;
end.
